--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>О компании — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Профессиональные ассенизаторские услуги в Пензе и области. О компании Золотарь 58 — гарантии, опыт, современные технологии.">
+  <meta name="description" content="Профессиональные услуги ассенизатора и аварийной прочистки канализации в Пензе.">
   <meta property="og:title" content="О компании — Золотарь 58">
-  <meta property="og:description" content="Профессиональные услуги по прочистке и откачке канализации. Круглосуточно, с гарантией качества.">
+  <meta property="og:description" content="Кто мы и почему нам доверяют в Пензе и области.">
   <meta property="og:image" content="logo.png">
   <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
@@ -14,40 +14,56 @@
 </head>
 <body>
   <header class="header">
-  <div class="container header-flex">
-    <a href="index.html" class="logo-link">
-      <img src="logo.png" class="logo-img" alt="Золотарь 58">
-      <span class="logo-title">Золотарь 58</span>
-    </a>
-    <!-- Кликабельный заголовок только для мобилы! -->
-    <a href="index.html" class="header-title-mobile">Золотарь 58</a>
-    <nav class="nav">
-      <a href="services.html">Услуги</a>
-      <a href="about.html">О компании</a>
-      <a href="licenses.html">Сертификаты</a>
-      <a href="contacts.html">Контакты</a>
-    </nav>
-    <button class="burger" aria-label="Открыть меню">
-      <span></span>
-    </button>
-  </div>
-</header>
+    <div class="container header-flex">
+      <a href="index.html" class="logo-link">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <span class="logo-title">Золотарь 58</span>
+      </a>
+      <a href="index.html" class="header-title-mobile">Золотарь 58</a>
+      <nav class="nav">
+        <a href="services.html">Услуги</a>
+        <a href="about.html" class="active">О компании</a>
+        <a href="licenses.html">Сертификаты</a>
+        <a href="contacts.html">Контакты</a>
+      </nav>
+      <button class="burger" aria-label="Открыть меню"><span></span></button>
+    </div>
+  </header>
   <main>
-    <section class="main-intro" style="margin-top:40px;">
-      <h1>О компании «Золотарь 58»</h1>
-      <p class="main-subtitle" style="margin-bottom:34px;">Ассенизаторские услуги, прочистка и откачка канализации в Пензе и области — качественно и без выходных.</p>
-      <div class="about-text">
-        <p>
-          «Золотарь 58» — современная компания по аварийной прочистке и профессиональной откачке канализации, септиков, колодцев и других инженерных сетей. Работаем с частными и юридическими лицами, заключаем официальные договоры на обслуживание предприятий.<br><br>
-          В нашем распоряжении — профессиональное гидродинамическое и механическое оборудование, видеоинспекция труб, полный спектр работ по обслуживанию канализации.<br><br>
-          <b>Наши преимущества:</b><br>
-          — Аварийный выезд 24/7 и быстрое реагирование;<br>
-          — Гарантия качества, прозрачные цены;<br>
-          — Опытные сотрудники с квалификацией;<br>
-          — Современные технологии, безопасные для труб;<br>
-          — Оплата по счету или наличными.
-        </p>
+    <section class="main-intro">
+      <h1>О компании</h1>
+      <p class="main-subtitle">Профессиональная команда для любых задач по откачке и прочистке канализации</p>
+    </section>
+    <section class="about-text">
+      <p>
+        <b>«Золотарь 58»</b> — это надёжный сервис по откачке и прочистке канализации, работе с септиками и аварийным ситуациям в Пензе и области.<br><br>
+        Мы работаем <b>без выходных</b>, выезжаем <b>24/7</b>, используем только современное оборудование и даём гарантию на все услуги. Для нас главное — честный подход, прозрачные цены и спокойствие клиента.
+      </p>
+    </section>
+    <section class="about-facts">
+      <h2>Почему выбирают нас</h2>
+      <ul>
+        <li><span class="about-icon">🚚</span>Собственный автопарк спецтехники</li>
+        <li><span class="about-icon">⏱️</span>Быстрый выезд в любую точку Пензы и области</li>
+        <li><span class="about-icon">🛡️</span>Гарантия на выполненные работы</li>
+        <li><span class="about-icon">📑</span>Все работы по официальному договору</li>
+        <li><span class="about-icon">💬</span>Всегда на связи — консультация бесплатно</li>
+      </ul>
+    </section>
+    <section class="about-history">
+      <h2>Наша история</h2>
+      <div class="timeline">
+        <div class="timeline-item"><b>2022:</b> Основание компании, первые постоянные клиенты</div>
+        <div class="timeline-item"><b>2023:</b> Расширение автопарка и спектра услуг</div>
+        <div class="timeline-item"><b>2024:</b> Более 200 объектов и десятки положительных отзывов</div>
+        <div class="timeline-item"><b>2025:</b> Запуск сайта и автоматизация приёма заявок</div>
       </div>
+    </section>
+    <section class="about-mission">
+      <h2>Наша миссия</h2>
+      <p>
+        Сделать сервис по обслуживанию канализации в Пензе удобным, честным и надёжным. Мы заботимся о каждом клиенте и стремимся решать задачи быстро и без лишних хлопот.
+      </p>
     </section>
   </main>
   <footer>
@@ -56,20 +72,20 @@
     </div>
   </footer>
   <script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const burger = document.querySelector('.burger');
-    const nav = document.querySelector('.nav');
-    burger.addEventListener('click', function () {
-      nav.classList.toggle('open');
-      burger.classList.toggle('active');
+    document.addEventListener("DOMContentLoaded", function () {
+      const burger = document.querySelector('.burger');
+      const nav = document.querySelector('.nav');
+      burger.addEventListener('click', function () {
+        nav.classList.toggle('open');
+        burger.classList.toggle('active');
+      });
+      document.addEventListener('click', function (e) {
+        if (!burger.contains(e.target) && !nav.contains(e.target)) {
+          nav.classList.remove('open');
+          burger.classList.remove('active');
+        }
+      });
     });
-    document.addEventListener('click', function (e) {
-      if (!burger.contains(e.target) && !nav.contains(e.target)) {
-        nav.classList.remove('open');
-        burger.classList.remove('active');
-      }
-    });
-  });
   </script>
 </body>
 </html>
