--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Золотарь 58 — Ассенизатор в Пензе | Прочистка и откачка канализации</title>
+  <title>Золотарь 58 — Ассенизатор Пенза, откачка, прочистка канализации</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Откачка и прочистка канализации в Пензе и области. Круглосуточно, официально, гарантии, техника до 12 м³.">
-  <meta property="og:title" content="Золотарь 58 — Ассенизатор в Пензе">
-  <meta property="og:description" content="Все виды работ по канализации и откачке. Без выходных, с гарантией.">
+  <meta name="description" content="Ассенизаторские услуги, аварийная откачка и прочистка канализации в Пензе и области 24/7. Современное оборудование. Круглосуточно.">
+  <meta property="og:title" content="Золотарь 58 — Ассенизатор Пенза">
+  <meta property="og:description" content="Откачка, прочистка канализации, профессиональные ассенизаторские услуги по Пензе и области 24/7.">
   <meta property="og:image" content="logo.png">
   <link rel="icon" type="image/png" href="favicon.ico">
-  <!-- Montserrat Black для объёмного логотипа -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,17 +17,8 @@
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
         <img src="logo.png" class="logo-img" alt="Золотарь 58">
-        <!-- Объёмный стиль логотипа -->
-        <span class="logo-title" style="
-          font-family: 'Montserrat', 'Georgia', serif;
-          font-weight: 900;
-          color: #056ecf;
-          font-size: 2.2em;
-          letter-spacing: 2px;
-          text-shadow: 0 3px 12px #7fc8f8, 0 1px 0 #fff, 0 2px 4px #aad5f6;
-        ">Золотарь 58</span>
+        <span class="logo-title">Золотарь 58</span>
       </a>
-      <!-- Мобильный заголовок -->
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
@@ -42,108 +32,82 @@
     </div>
   </header>
 
-  <main>
-    <!-- Первый экран -->
-    <section class="main-intro">
-      <h1>Ассенизаторские услуги в Пензе и области</h1>
-      <p class="main-subtitle">Экстренная откачка и прочистка канализации, септиков, ям и ливнёвки. Работаем официально, круглосуточно и с гарантией результата.</p>
-      <a href="tel:+79273537808" class="cta">Позвонить: +7 927 353-78-08</a>
-    </section>
+  <div class="working-now-bar">
+    <span style="margin-right: 8px;">💧</span> Работаем сейчас &nbsp;<span style="font-size:1.15em;">•</span>&nbsp; Пушанина 46а, Пенза
+  </div>
 
-    <!-- Блок "Почему выбирают нас" -->
-    <section class="why-us">
-      <h2>Почему выбирают нас?</h2>
-      <ul>
-        <li><span class="usp-icon">🚚</span> Своя современная техника до 12 м³ — любые объёмы за 1 выезд</li>
-        <li><span class="usp-icon">🕒</span> Работаем 24/7 без выходных и праздников</li>
-        <li><span class="usp-icon">📑</span> Официально: договоры, акты, документы для юр. лиц</li>
-        <li><span class="usp-icon">💯</span> Честные цены без навязывания лишних работ</li>
-        <li><span class="usp-icon">✔️</span> Быстро приезжаем, аккуратно работаем, всегда на связи</li>
-      </ul>
-    </section>
+  <section class="main-intro">
+    <h1>Откачка и прочистка канализации 24/7</h1>
+    <p class="main-subtitle">Работаем по Пензе и области. Современное оборудование, аварийный выезд, без выходных. Гарантия качества.</p>
+    <a class="cta" href="tel:+79022073636">Позвонить</a>
+  </section>
 
-    <!-- Услуги -->
-    <section class="services-list">
-      <div class="service-card">
-        <img src="emergency-cleaning.jpg" alt="Аварийная прочистка канализации" class="service-img">
-        <h3>Аварийная прочистка канализации</h3>
-        <p>Быстрое устранение засоров — механическим тросом и гидродинамикой.</p>
-      </div>
-      <div class="service-card">
-        <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="service-img">
-        <h3>Гидродинамика</h3>
-        <p>Безопасная и эффективная прочистка труб водой под давлением.</p>
-      </div>
-      <div class="service-card">
-        <img src="septic.jpg" alt="Откачка ям, септиков" class="service-img">
-        <h3>Откачка септиков, ям, туалетов</h3>
-        <p>Вывоз любых объёмов. Илосос, дезинфекция, санитарная обработка.</p>
-      </div>
-      <div class="service-card">
-        <img src="video.jpg" alt="Видеоинспекция канализации" class="service-img">
-        <h3>Видеоинспекция</h3>
-        <p>Осмотр труб камерой, диагностика сложных засоров, отчёты для УК и ТСЖ.</p>
-      </div>
-      <div class="service-card">
-        <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img">
-        <h3>Обслуживание организаций</h3>
-        <p>Постоянное сервисное обслуживание, все документы для бухгалтерии.</p>
-      </div>
-    </section>
+  <!-- Новый блок "О компании" -->
+  <div class="about-card">
+    <b>«Золотарь 58»</b> — это надёжный сервис по откачке и прочистке канализации, работе с септиками и аварийным ситуациям в Пензе и области.<br><br>
+    Мы работаем <b>без выходных</b>, выезжаем <b>24/7</b>, используем только современное оборудование и даём гарантию на все услуги. <br>Для нас главное — честный подход, прозрачные цены и спокойствие клиента.
+  </div>
 
-    <!-- Блок О Компании -->
-    <section class="about-text">
-      <h2>О компании</h2>
-      <p>
-        Компания <b>«Золотарь 58»</b> — ваш надёжный партнёр по откачке и прочистке канализации в Пензе и области. С 2019 года мы выполняем аварийные, плановые и профилактические работы для частных клиентов, управляющих компаний, предприятий и муниципалитетов.
-      </p>
-      <p>
-        В нашем парке только современная спецтехника и оборудование, а все сотрудники прошли профессиональное обучение и работают строго по нормативам. Оформляем договоры, выдаём акты, предоставляем закрывающие документы. Мы ценим доверие клиентов и всегда гарантируем честную смету, оперативный выезд и максимальное качество сервиса.
-      </p>
-      <ul>
-        <li>Быстрый выезд по Пензе и району</li>
-        <li>Безопасные технологии — не вредим трубам</li>
-        <li>Регулярные акции для постоянных клиентов</li>
-        <li>Официальные лицензии и сертификаты</li>
-      </ul>
-    </section>
+  <!-- Почему выбирают нас -->
+  <section class="why-us">
+    <h2>Почему выбирают нас</h2>
+    <ul>
+      <li><span class="usp-icon">🚚</span><b>Быстрый выезд</b> — оперативная подача машины, 24/7 по Пензе и области.</li>
+      <li><span class="usp-icon">🛠️</span><b>Профессиональное оборудование</b> — гидродинамика, механика, видеоинспекция.</li>
+      <li><span class="usp-icon">💼</span><b>Работа с организациями</b> — заключаем официальные договоры, выдаём документы.</li>
+      <li><span class="usp-icon">💳</span><b>Удобная оплата</b> — наличные и безналичный расчет.</li>
+      <li><span class="usp-icon">✅</span><b>Гарантия</b> — вы всегда получаете честный результат и чистую систему!</li>
+    </ul>
+  </section>
 
-    <!-- Блок Отзывы -->
-    <section class="reviews-slider">
-      <div class="reviews-title">Отзывы клиентов</div>
+  <!-- История компании -->
+  <section class="about-history">
+    <h2>Наша история</h2>
+    <ul>
+      <li><b>2022:</b> Основание компании, первые постоянные клиенты</li>
+      <li><b>2023:</b> Расширение автопарка и спектра услуг</li>
+      <li><b>2024:</b> Более 200 объектов и десятки положительных отзывов</li>
+      <li><b>2025:</b> Запуск сайта и автоматизация приёма заявок</li>
+    </ul>
+  </section>
+
+  <!-- Слайдер отзывов с оценками -->
+  <section>
+    <div class="reviews-slider">
+      <div class="reviews-title">Отзывы наших клиентов</div>
       <div class="review-item active">
         <div class="review-stars">
-          <span class="star">&#9733;</span><span class="star">&#9733;</span>
-          <span class="star">&#9733;</span><span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
+          <span style="color:#ffc83d;">★★★★★</span>
         </div>
-        <div class="review-text">Всё чётко: заявку оформили по телефону, через 40 минут машина была у дома. Засор устранили быстро, приятно удивили ценой!</div>
-        <div class="review-author">Сергей, 5.0 ★ Яндекс Услуги</div>
+        Всё понравилось, быстро приехали, всё сделали! Рекомендую.
+        <div class="review-author">— Николай С.</div>
       </div>
       <div class="review-item">
         <div class="review-stars">
-          <span class="star">&#9733;</span><span class="star">&#9733;</span>
-          <span class="star">&#9733;</span><span class="star">&#9733;</span>
-          <span class="star">&#9734;</span>
+          <span style="color:#ffc83d;">★★★★★</span>
         </div>
-        <div class="review-text">Приехали даже ночью. Всё по-человечески, аккуратно и без грязи. Рекомендую.</div>
-        <div class="review-author">Елена, 4.0 ★ Яндекс Услуги</div>
+        Заказывал откачку септика. Приехали в течение часа, без нареканий.
+        <div class="review-author">— Ирина Д.</div>
       </div>
       <div class="review-item">
         <div class="review-stars">
-          <span class="star">&#9733;</span><span class="star">&#9733;</span>
-          <span class="star">&#9733;</span><span class="star">&#9733;</span>
-          <span class="star">&#9733;</span>
+          <span style="color:#ffc83d;">★★★★★</span>
         </div>
-        <div class="review-text">Спасибо! Делают отчёты для фирмы, всегда вовремя. Цены не меняют, работают по договору.</div>
-        <div class="review-author">Антон, 5.0 ★ Яндекс Услуги</div>
+        Надёжная компания, обращаемся не первый раз. Спасибо!
+        <div class="review-author">— Владимир М.</div>
       </div>
-      <div class="slider-nav"></div>
+      <div class="slider-nav">
+        <button class="slider-dot active"></button>
+        <button class="slider-dot"></button>
+        <button class="slider-dot"></button>
+      </div>
       <div class="reviews-yandex-link">
-        <a href="https://yandex.ru/profile/41423346028" target="_blank" rel="noopener">Читать все отзывы на Яндекс Услугах</a>
+        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">
+          Все отзывы на Яндекс.Услугах <span style="font-size:1.2em;">→</span>
+        </a>
       </div>
-    </section>
-  </main>
+    </div>
+  </section>
 
   <footer>
     <div class="container">
@@ -152,7 +116,7 @@
   </footer>
 
   <script>
-    // Бургер-меню
+    // Бургер-меню и слайдер отзывов
     document.addEventListener("DOMContentLoaded", function () {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
@@ -168,41 +132,25 @@
       });
 
       // Слайдер отзывов
-      const items = document.querySelectorAll('.review-item');
-      const navDots = document.querySelector('.slider-nav');
-      let active = 0;
+      const reviews = document.querySelectorAll('.review-item');
+      const dots = document.querySelectorAll('.slider-dot');
+      let current = 0;
       function showReview(idx) {
-        items.forEach((el, i) => el.classList.toggle('active', i === idx));
-        if (navDots) {
-          [...navDots.children].forEach((dot, i) => dot.classList.toggle('active', i === idx));
-        }
-        active = idx;
-      }
-      if (navDots) {
-        items.forEach((_, i) => {
-          const dot = document.createElement('button');
-          dot.type = "button";
-          dot.className = "slider-dot" + (i === 0 ? " active" : "");
-          dot.onclick = () => showReview(i);
-          navDots.appendChild(dot);
+        reviews.forEach((el, i) => {
+          el.classList.toggle('active', i === idx);
+          dots[i].classList.toggle('active', i === idx);
         });
       }
-      // Swipe support (мобильный UX)
-      let startX = null;
-      document.querySelector('.reviews-slider').addEventListener('touchstart', e => {
-        startX = e.touches[0].clientX;
+      dots.forEach((dot, i) => {
+        dot.addEventListener('click', () => {
+          current = i;
+          showReview(current);
+        });
       });
-      document.querySelector('.reviews-slider').addEventListener('touchend', e => {
-        if (startX === null) return;
-        const dx = e.changedTouches[0].clientX - startX;
-        if (Math.abs(dx) > 40) {
-          let next = active + (dx < 0 ? 1 : -1);
-          if (next < 0) next = items.length - 1;
-          if (next >= items.length) next = 0;
-          showReview(next);
-        }
-        startX = null;
-      });
+      setInterval(() => {
+        current = (current + 1) % reviews.length;
+        showReview(current);
+      }, 6000);
     });
   </script>
 </body>
