--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
-      <button class="burger" aria-label="Открыть меню">
-        <span></span>
-      </button>
+      <button class="burger" aria-label="Открыть меню"><span></span></button>
     </div>
   </header>
 
@@ -38,61 +36,40 @@
 
   <section class="main-intro">
     <h1>Откачка и прочистка канализации 24/7</h1>
-    <p class="main-subtitle">Работаем по Пензе и области. Современное оборудование, аварийный выезд, без выходных. Гарантия качества.</p>
+    <p class="main-subtitle">Профессиональная команда. Оперативный выезд по Пензе и области. Современное оборудование. Гарантия результата.</p>
     <a class="cta" href="tel:+79022073636">Позвонить</a>
   </section>
 
-  <!-- Новый блок "О компании" -->
   <div class="about-card">
-    <b>«Золотарь 58»</b> — это надёжный сервис по откачке и прочистке канализации, работе с септиками и аварийным ситуациям в Пензе и области.<br><br>
-    Мы работаем <b>без выходных</b>, выезжаем <b>24/7</b>, используем только современное оборудование и даём гарантию на все услуги. <br>Для нас главное — честный подход, прозрачные цены и спокойствие клиента.
+    <b>«Золотарь 58»</b> — сервис по аварийной откачке и прочистке канализации с честными ценами, работой без выходных и круглосуточной поддержкой.
   </div>
 
-  <!-- Почему выбирают нас -->
   <section class="why-us">
     <h2>Почему выбирают нас</h2>
     <ul>
-      <li><span class="usp-icon">🚚</span><b>Быстрый выезд</b> — оперативная подача машины, 24/7 по Пензе и области.</li>
-      <li><span class="usp-icon">🛠️</span><b>Профессиональное оборудование</b> — гидродинамика, механика, видеоинспекция.</li>
-      <li><span class="usp-icon">💼</span><b>Работа с организациями</b> — заключаем официальные договоры, выдаём документы.</li>
-      <li><span class="usp-icon">💳</span><b>Удобная оплата</b> — наличные и безналичный расчет.</li>
-      <li><span class="usp-icon">✅</span><b>Гарантия</b> — вы всегда получаете честный результат и чистую систему!</li>
+      <li><span class="usp-icon">🚚</span><b>Быстрый выезд</b> — подача машины в течение часа, круглосуточно.</li>
+      <li><span class="usp-icon">🛠️</span><b>Современное оборудование</b> — чисто и безопасно.</li>
+      <li><span class="usp-icon">💼</span><b>Работаем официально</b> — договор, документы, чек.</li>
+      <li><span class="usp-icon">💳</span><b>Оплата удобным способом</b> — наличные или безнал.</li>
+      <li><span class="usp-icon">✅</span><b>Гарантия на все работы</b></li>
     </ul>
   </section>
 
-  <!-- История компании -->
-  <section class="about-history">
-    <h2>Наша история</h2>
-    <ul>
-      <li><b>2022:</b> Основание компании, первые постоянные клиенты</li>
-      <li><b>2023:</b> Расширение автопарка и спектра услуг</li>
-      <li><b>2024:</b> Более 200 объектов и десятки положительных отзывов</li>
-      <li><b>2025:</b> Запуск сайта и автоматизация приёма заявок</li>
-    </ul>
-  </section>
-
-  <!-- Слайдер отзывов с оценками -->
   <section>
     <div class="reviews-slider">
       <div class="reviews-title">Отзывы наших клиентов</div>
       <div class="review-item active">
-        <div class="review-stars">
-          <span style="color:#ffc83d;">★★★★★</span>
-        </div>
+        <div class="review-stars"><span style="color:#ffc83d;">★★★★★</span></div>
         Всё понравилось, быстро приехали, всё сделали! Рекомендую.
         <div class="review-author">— Николай С.</div>
       </div>
       <div class="review-item">
-        <div class="review-stars">
-          <span style="color:#ffc83d;">★★★★★</span>
-        </div>
+        <div class="review-stars"><span style="color:#ffc83d;">★★★★★</span></div>
         Заказывал откачку септика. Приехали в течение часа, без нареканий.
         <div class="review-author">— Ирина Д.</div>
       </div>
       <div class="review-item">
-        <div class="review-stars">
-          <span style="color:#ffc83d;">★★★★★</span>
-        </div>
+        <div class="review-stars"><span style="color:#ffc83d;">★★★★★</span></div>
         Надёжная компания, обращаемся не первый раз. Спасибо!
         <div class="review-author">— Владимир М.</div>
       </div>
@@ -116,7 +93,7 @@
   </footer>
 
   <script>
-    // Бургер-меню и слайдер отзывов
+    // Бургер и слайдер
     document.addEventListener("DOMContentLoaded", function () {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
@@ -131,7 +108,7 @@
         }
       });
 
-      // Слайдер отзывов
+      // Отзывы-слайдер
       const reviews = document.querySelectorAll('.review-item');
       const dots = document.querySelectorAll('.slider-dot');
       let current = 0;
