--- a/about.html
+++ b/about.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8">
   <title>О компании — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Профессиональные услуги ассенизатора и аварийной прочистки канализации в Пензе.">
-  <meta property="og:title" content="О компании — Золотарь 58">
-  <meta property="og:description" content="Кто мы и почему нам доверяют в Пензе и области.">
-  <meta property="og:image" content="logo.png">
+  <meta name="description" content="Подробная информация о сервисе Золотарь 58. Миссия, история, ценности, подход и преимущества.">
   <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -29,49 +26,62 @@
       <button class="burger" aria-label="Открыть меню"><span></span></button>
     </div>
   </header>
+
   <main>
     <section class="main-intro">
-      <h1>О компании</h1>
-      <p class="main-subtitle">Профессиональная команда для любых задач по откачке и прочистке канализации</p>
+      <h1>О компании «Золотарь 58»</h1>
     </section>
-    <section class="about-text">
-      <p>
-        <b>«Золотарь 58»</b> — это надёжный сервис по откачке и прочистке канализации, работе с септиками и аварийным ситуациям в Пензе и области.<br><br>
-        Мы работаем <b>без выходных</b>, выезжаем <b>24/7</b>, используем только современное оборудование и даём гарантию на все услуги. Для нас главное — честный подход, прозрачные цены и спокойствие клиента.
-      </p>
-    </section>
-    <section class="about-facts">
-      <h2>Почему выбирают нас</h2>
-      <ul>
-        <li><span class="about-icon">🚚</span>Собственный автопарк спецтехники</li>
-        <li><span class="about-icon">⏱️</span>Быстрый выезд в любую точку Пензы и области</li>
-        <li><span class="about-icon">🛡️</span>Гарантия на выполненные работы</li>
-        <li><span class="about-icon">📑</span>Все работы по официальному договору</li>
-        <li><span class="about-icon">💬</span>Всегда на связи — консультация бесплатно</li>
-      </ul>
-    </section>
-    <section class="about-history">
-      <h2>Наша история</h2>
-      <div class="timeline">
-        <div class="timeline-item"><b>2022:</b> Основание компании, первые постоянные клиенты</div>
-        <div class="timeline-item"><b>2023:</b> Расширение автопарка и спектра услуг</div>
-        <div class="timeline-item"><b>2024:</b> Более 200 объектов и десятки положительных отзывов</div>
-        <div class="timeline-item"><b>2025:</b> Запуск сайта и автоматизация приёма заявок</div>
-      </div>
-    </section>
-    <section class="about-mission">
+
+    <div class="about-text">
+      <p><b>«Золотарь 58»</b> — это профессиональная команда специалистов по откачке и прочистке канализации, работе с септиками и аварийным ситуациям в Пензе и области. Мы предоставляем полный цикл услуг для частных лиц, организаций и предприятий, гарантируя оперативность и качество.</p>
+
       <h2>Наша миссия</h2>
-      <p>
-        Сделать сервис по обслуживанию канализации в Пензе удобным, честным и надёжным. Мы заботимся о каждом клиенте и стремимся решать задачи быстро и без лишних хлопот.
-      </p>
-    </section>
+      <p>Обеспечить клиентам чистоту, безопасность и спокойствие за счет быстрого и профессионального решения любых проблем с канализацией.</p>
+
+      <h2>Наши ценности</h2>
+      <ul>
+        <li>Честность и открытость во всех вопросах — никаких скрытых платежей.</li>
+        <li>Профессионализм сотрудников и современное оборудование.</li>
+        <li>Ответственность — обязательства для нас не просто слова.</li>
+        <li>Гарантия на каждую услугу.</li>
+        <li>Внимательность к каждому клиенту и индивидуальный подход.</li>
+      </ul>
+
+      <h2>История компании</h2>
+      <ul>
+        <li><b>2022:</b> Компания основана и начала работать с частными клиентами.</li>
+        <li><b>2023:</b> Расширение автопарка, внедрение новых технологий, первые корпоративные договоры.</li>
+        <li><b>2024:</b> Более 200 обслуженных объектов, десятки положительных отзывов, рост постоянных клиентов.</li>
+        <li><b>2025:</b> Запуск автоматизации приёма заявок через сайт, постоянный мониторинг качества услуг.</li>
+      </ul>
+
+      <h2>Как мы работаем</h2>
+      <ol>
+        <li>Принимаем заявку 24/7 — через звонок или сайт.</li>
+        <li>Оцениваем задачу и подбираем технику.</li>
+        <li>Оперативно выезжаем по адресу, выполняем работу чисто и быстро.</li>
+        <li>Всё фиксируется официально, выдаём документы.</li>
+        <li>Всегда остаёмся на связи после выполнения заказа.</li>
+      </ol>
+
+      <h2>Почему нам доверяют</h2>
+      <ul>
+        <li>Быстрый выезд — в течение 60 минут после обращения.</li>
+        <li>Современная техника и опытные специалисты.</li>
+        <li>Работаем без выходных, обслуживаем город и область.</li>
+        <li>Гарантия на каждую услугу.</li>
+        <li>Честные и прозрачные цены.</li>
+      </ul>
+    </div>
   </main>
+
   <footer>
     <div class="container">
       <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И. | Адрес: г. Пенза, ул. Пушанина, 46а</p>
     </div>
   </footer>
   <script>
+    // Бургер-меню
     document.addEventListener("DOMContentLoaded", function () {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
