--- a/about.html
+++ b/about.html
@@ -49,10 +49,10 @@
 
       <h2>История компании</h2>
       <ul>
-        <li><b>2022:</b> Компания основана и начала работать с частными клиентами.</li>
+        <li><b>2020:</b> Компания основана и начала работать с частными клиентами.</li>
         <li><b>2023:</b> Расширение автопарка, внедрение новых технологий, первые корпоративные договоры.</li>
         <li><b>2024:</b> Более 200 обслуженных объектов, десятки положительных отзывов, рост постоянных клиентов.</li>
-        <li><b>2025:</b> Запуск автоматизации приёма заявок через сайт, постоянный мониторинг качества услуг.</li>
+        <li><b>2025:</b> Запуск официального сайта компании.</li>
       </ul>
 
       <h2>Как мы работаем</h2>
