--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
       <h2>Как мы работаем</h2>
       <ol>
-        <li>Принимаем заявку 24/7 — через звонок или сайт.</li>
+        <li>Принимаем заявку 24/7 — через звонок.</li>
         <li>Оцениваем задачу и подбираем технику.</li>
         <li>Оперативно выезжаем по адресу, выполняем работу чисто и быстро.</li>
         <li>Всё фиксируется официально, выдаём документы.</li>
