--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Подробная информация о сервисе Золотарь 58. Миссия, история, ценности, подход и преимущества.">
   <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://zolotar58.ru/about.html">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
