--- a/services.html
+++ b/services.html
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://zolotar58.ru/services.html">
 </head>
 <body>
   <header class="header">
