--- a/licenses.html
+++ b/licenses.html
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://zolotar58.ru/licenses.html">
   <style>
     /* Новый вид для блока лицензий и модалки */
     .licenses-grid {
