--- a/about.html
+++ b/about.html
@@ -2,19 +2,43 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>О компании — Золотарь 58</title>
+  <title>О компании — Золотарь 58 | Ассенизаторские услуги в Пензе</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Подробная информация о сервисе Золотарь 58. Миссия, история, ценности, подход и преимущества.">
+  <meta name="description" content="История и преимущества компании Золотарь 58. Ассенизаторские услуги, откачка канализации, чистка труб в Пензе с 2020 года.">
+  <meta name="keywords" content="о компании, история, ассенизатор пенза, откачка канализации пенза, чистка труб пенза, выгребные ямы, услуги ассенизатора, Золотарь 58, лицензии, опыт работы, отзывы, сотрудники, официальный подрядчик">
+  <meta property="og:title" content="О компании — Золотарь 58">
+  <meta property="og:description" content="Золотарь 58 — надёжный партнёр по откачке канализации и чистке труб в Пензе и области.">
+  <meta property="og:image" content="https://zolotar58.ru/logo.png">
+  <meta property="og:url" content="https://zolotar58.ru/about.html">
+  <meta property="og:type" content="website">
   <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="canonical" href="https://zolotar58.ru/about.html">
   <link rel="stylesheet" href="style.css">
+  <!-- Микроразметка Schema.org для LocalBusiness -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Золотарь 58",
+    "image": "https://zolotar58.ru/logo.png",
+    "telephone": "+7-902-207-36-36",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "ул. Пушанина, 46а",
+      "addressLocality": "Пенза",
+      "addressCountry": "Россия"
+    },
+    "url": "https://zolotar58.ru/",
+    "openingHours": "24/7",
+    "description": "О компании Золотарь 58 — Ассенизаторские услуги, откачка канализации, чистка труб и септиков в Пензе и области с 2020 года."
+  }
+  </script>
 </head>
 <body>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58 — Ассенизатор в Пензе">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
@@ -24,65 +48,89 @@
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
-      <button class="burger" aria-label="Открыть меню"><span></span></button>
+      <button class="burger" aria-label="Открыть меню">
+        <span></span>
+      </button>
     </div>
   </header>
+
+  <div class="working-now-bar">
+    <span style="margin-right: 8px;">💧</span> Работаем сейчас &nbsp;<span style="font-size:1.15em;">•</span>&nbsp; Пушанина 46а, Пенза
+  </div>
 
   <main>
     <section class="main-intro">
       <h1>О компании «Золотарь 58»</h1>
+      <p class="main-subtitle">
+        <b>Золотарь 58</b> — это команда профессионалов с опытом работы более 4 лет, предоставляющая услуги откачки канализации, чистки труб и септиков в Пензе и области. Мы работаем с частными лицами, организациями, управляющими компаниями и предприятиями.
+      </p>
     </section>
 
-    <div class="about-text">
-      <p><b>«Золотарь 58»</b> — это профессиональная команда специалистов по откачке и прочистке канализации, работе с септиками и аварийным ситуациям в Пензе и области. Мы предоставляем полный цикл услуг для частных лиц, организаций и предприятий, гарантируя оперативность и качество.</p>
-
-      <h2>Наша миссия</h2>
-      <p>Обеспечить клиентам чистоту, безопасность и спокойствие за счет быстрого и профессионального решения любых проблем с канализацией.</p>
-
-      <h2>Наши ценности</h2>
-      <ul>
-        <li>Честность и открытость во всех вопросах — никаких скрытых платежей.</li>
-        <li>Профессионализм сотрудников и современное оборудование.</li>
-        <li>Ответственность — обязательства для нас не просто слова.</li>
-        <li>Гарантия на каждую услугу.</li>
-        <li>Внимательность к каждому клиенту и индивидуальный подход.</li>
-      </ul>
-
+    <section class="about-text">
       <h2>История компании</h2>
+      <p>
+        Компания «Золотарь 58» основана в <b>2020 году</b> в Пензе. За это время мы помогли сотням клиентов, заработали репутацию честных исполнителей и заслужили множество положительных отзывов.
+      </p>
+      <p>
+        В <b>2025 году</b> для удобства наших клиентов был запущен собственный сайт, чтобы сделать заказ ассенизаторских услуг ещё быстрее и проще. Однако мы работаем и принимаем заявки только по телефону — <a href="tel:+79022073636" class="phone-link">+7-902-207-36-36</a>.
+      </p>
+      <h2>Наши преимущества</h2>
       <ul>
-        <li><b>2020:</b> Компания основана и начала работать с частными клиентами.</li>
-        <li><b>2023:</b> Расширение автопарка, внедрение новых технологий, первые корпоративные договоры.</li>
-        <li><b>2024:</b> Более 200 обслуженных объектов, десятки положительных отзывов, рост постоянных клиентов.</li>
-        <li><b>2025:</b> Запуск официального сайта компании.</li>
+        <li>Оперативный выезд по Пензе и области 24/7</li>
+        <li>Современное оборудование: гидродинамика, механика, видеоинспекция</li>
+        <li>Официальные документы для организаций</li>
+        <li>Гарантия результата и чистоты</li>
+        <li>Вежливый и опытный персонал</li>
+        <li>Честные цены без скрытых доплат</li>
       </ul>
-
-      <h2>Как мы работаем</h2>
-      <ol>
-        <li>Принимаем заявку 24/7 — через звонок.</li>
-        <li>Оцениваем задачу и подбираем технику.</li>
-        <li>Оперативно выезжаем по адресу, выполняем работу чисто и быстро.</li>
-        <li>Всё фиксируется официально, выдаём документы.</li>
-        <li>Всегда остаёмся на связи после выполнения заказа.</li>
-      </ol>
-
-      <h2>Почему нам доверяют</h2>
+      <h2>С кем работаем</h2>
       <ul>
-        <li>Быстрый выезд — в течение 60 минут после обращения.</li>
-        <li>Современная техника и опытные специалисты.</li>
-        <li>Работаем без выходных, обслуживаем город и область.</li>
-        <li>Гарантия на каждую услугу.</li>
-        <li>Честные и прозрачные цены.</li>
+        <li>Частные домовладения</li>
+        <li>Дачи, СНТ, коттеджи</li>
+        <li>Кафе, рестораны, магазины</li>
+        <li>Управляющие компании</li>
+        <li>Производственные предприятия</li>
+        <li>Школы, детские сады, объекты соцсферы</li>
       </ul>
-    </div>
+      <h2>Наш адрес и контакты</h2>
+      <p>
+        <b>г. Пенза, ул. Пушанина, 46а</b><br>
+        Телефон для заказа: <a href="tel:+79022073636" class="phone-link">+7-902-207-36-36</a>
+      </p>
+    </section>
+
+    <section class="faq-section">
+      <h2>Частые вопросы</h2>
+      <ul class="faq-list">
+        <li>
+          <span class="faq-q">Как сделать заказ?</span>
+          <span class="faq-a">Просто позвоните по телефону <a href="tel:+79022073636">+7-902-207-36-36</a>. Мы работаем без выходных, заявки через сайт не принимаем.</span>
+        </li>
+        <li>
+          <span class="faq-q">Какие документы предоставляете?</span>
+          <span class="faq-a">Для организаций выдаём все необходимые официальные бумаги и закрывающие документы.</span>
+        </li>
+        <li>
+          <span class="faq-q">Сколько стоит откачка?</span>
+          <span class="faq-a">Цена зависит от объёма и сложности. Позвоните, и рассчитаем стоимость индивидуально.</span>
+        </li>
+      </ul>
+    </section>
   </main>
 
   <footer>
     <div class="container">
-      <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И. | Адрес: г. Пенза, ул. Пушанина, 46а</p>
+      <p class="footer-text">
+        © 2025 Золотарь 58 — ИП Зоткин А.И. | Ассенизатор в Пензе, ул. Пушанина, 46а<br>
+        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">Отзывы Яндекс.Услуги</a> |
+        <a href="https://2gis.ru/penza/search/%D0%B0%D1%81%D1%81%D0%B5%D0%BD%D0%B8%D0%B7%D0%B0%D1%82%D0%BE%D1%80%20%D0%9F%D0%B5%D0%BD%D0%B7%D0%B0" target="_blank" rel="noopener">2ГИС</a> |
+        <a href="https://www.avito.ru/penza?q=ассенизатор" target="_blank" rel="noopener">Avito</a>
+      </p>
     </div>
   </footer>
+
   <script>
-    // Бургер-меню
+    // Бургер меню
     document.addEventListener("DOMContentLoaded", function () {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
